--- a/photogur_scaffold/app/views/pictures/index.html.erb
+++ b/photogur_scaffold/app/views/pictures/index.html.erb
@@ -14,7 +14,7 @@
   <tr>
     <td><%= picture.title %></td>
     <td><%= picture.artist %></td>
-    <td><%= image_tag(picture.url) %></td>
+    <td><%= image_tag picture.image_url %></td>
     <td><%= link_to 'Show', picture %></td>
     <td><%= link_to 'Edit', edit_picture_path(picture) %></td>
     <td><%= link_to 'Destroy', picture, method: :delete, data: { confirm: 'Are you sure?' } %></td>
